--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,7 @@ crashlytics-build.properties
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/**/indexLayout.xml
 
 # Generated files
 .idea/**/contentModel.xml
